[gd_scene load_steps=4 format=1]

[ext_resource path="res://menu/savegame.gd" type="Script" id=1]
[ext_resource path="res://menu/back.png" type="Texture" id=2]
[ext_resource path="res://bg.png" type="Texture" id=3]

[node name="setting" type="Node2D"]

editor/display_folded = true
script/script = ExtResource( 1 )

[node name="save" type="Button" parent="."]

hint/tooltip = "Save Your Scor before Back!!"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 98.0
margin/top = 192.0
margin/right = 197.0
margin/bottom = 212.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "save"
flat = false

[node name="Buttonreset" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 222.0
margin/top = 193.0
margin/right = 330.0
margin/bottom = 213.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "reset"
flat = false

[node name="Label 2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 488.0
margin/top = 23.0
margin/right = 613.0
margin/bottom = 37.0
text = "List Best Winner"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ItemList" type="ItemList" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 405.0
margin/top = 42.0
margin/right = 711.0
margin/bottom = 462.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 338.0
margin/top = 219.0
margin/right = 454.0
margin/bottom = 277.0
popup/exclusive = false
window/title = "Save to file"
dialog/text = "Save New Scor"
dialog/hide_on_ok = true

[node name="AcceptDialog 2" type="AcceptDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 291.0
margin/top = 224.0
margin/right = 551.0
margin/bottom = 331.0
popup/exclusive = false
window/title = "Skor Baru !!"
dialog/hide_on_ok = true

[node name="LineEdit" type="LineEdit" parent="AcceptDialog 2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 83.0
margin/top = 10.0
margin/right = 249.0
margin/bottom = 34.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Label 2" type="Label" parent="AcceptDialog 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 13.0
margin/right = 75.0
margin/bottom = 32.0
text = "New Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 3" type="Label" parent="AcceptDialog 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 82.0
margin/top = 46.0
margin/right = 131.0
margin/bottom = 68.0
text = "skor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2 2" type="Label" parent="AcceptDialog 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 46.0
margin/right = 75.0
margin/bottom = 63.0
text = "New skor"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WindowDialog" type="WindowDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 317.0
margin/top = 180.0
margin/right = 514.0
margin/bottom = 276.0
popup/exclusive = false
window/title = "Delete Winner List!"

[node name="Button" type="Button" parent="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 27.0
margin/top = 61.0
margin/right = 90.0
margin/bottom = 81.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="Button1" type="Button" parent="WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 61.0
margin/right = 169.0
margin/bottom = 81.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="Label" type="Label" parent="WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 54.0
margin/top = 26.0
margin/right = 152.0
margin/bottom = 42.0
text = "Are You Sure\?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton 2" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 12.0
margin/right = 70.4
margin/bottom = 81.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
params/scale = Vector2( 0.3, 0.3 )

[node name="bg" type="Sprite" parent="."]

visibility/opacity = 0.5
transform/pos = Vector2( 401.804, 239.418 )
z/z = -10
texture = ExtResource( 3 )

[connection signal="pressed" from="save" to="." method="_on_save_pressed"]

[connection signal="pressed" from="Buttonreset" to="." method="_on_Buttonreset_pressed"]

[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]

[connection signal="confirmed" from="AcceptDialog 2" to="." method="_on_AcceptDialog_2_confirmed"]

[connection signal="pressed" from="WindowDialog/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="WindowDialog/Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="TextureButton 2" to="." method="_on_TextureButton_2_pressed"]


